# church_facetrack_pro_NEW

./: .gitignore  README.md  attendance.db  attendance.db-shm  attendance.db-wal  config.py  custom_bytetrack.yaml  name_to_group.json  pyproject.toml
facetrack/: __init__.py  __main__.py  types.py
facetrack/core/: __init__.py  alert_manager.py  database.py  frame_processor.py  quality_assessment.py  video_capture.py
facetrack/data/: __init__.py  attendance_repository.py  faiss_repository.py  schema.sql
facetrack/infra/: __init__.py  config_loader.py  errors.py  logging.py  metrics.py  model_factory.py
facetrack/managers/: __init__.py  adaptive_threshold.py  identity_lock.py  identity_persistence.py  temporal_consensus.py  track_confidence.py  unknown_manager.py
facetrack/models/: __init__.py  alert.py  camera.py  person.py
facetrack/services/: __init__.py  config_service.py  indexing_service.py
facetrack/storage/: __init__.py  attendance_store.py  session_manager.py
facetrack/ui/: main_window.py  overlay_renderer.py  theme.py
facetrack/ui/components/: camera_tile.py  data_table.py  sidebar.py  stat_card.py  toast.py  top_bar.py
facetrack/ui/pages/: alerts.py  cameras.py  dashboard.py  insights.py  logs.py  settings.py
facetrack/workers/: __init__.py  camera_scanner.py  camera_worker.py  stats_worker.py
headless/: __init__.py  main.py
headless/processes/: __init__.py  inference.py  video_capture.py
